--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="https://npmcdn.com/basscss@7.1.1/css/basscss.min.css">
-    <title>{{ site.name }}</title>
+    <title>{{ site.title }}</title>
     <meta name="description" content="">
     <meta name="author" content="Brian Zelip">
     <meta name="keywords" content="">
     <style>
       body,
       .vh100 { min-height: 100vh; }
-
+      .align-center { align-items: center; }
+      .justify-center { justify-content: center; }
+      .justify-between { justify-content: space-between; }
+      .pt2 { padding-top: 1rem; }
+      .pb3 { padding-bottom: 2rem; }
     </style>
   </head>
 
   <body>
 
     <header>
-      <h1>A Syllabus for America, 2017</h1>
+      <div class="pt2">
+        <div class="container">
+          <div class="p2 bg-red flex align-center justify-between">
+            <h1 class="m0 h3">{{ site.title }}</h1>
+            <div>
+              <a href="" class="btn">about</a>
+              <button class="btn">submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
 
     <section>
@@ -34,9 +48,13 @@
     </section>
 
     <main>
-      {% for post in site.posts %}
-      {% include entry.html %}
-      {% endfor %}
+      <div class="p2">
+        <div class="container">
+          {% for post in site.posts %}
+          {% include entry.html %}
+          {% endfor %}
+        </div>
+      </div>
     </main>
 
   </body>
