--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="https://npmcdn.com/basscss@7.1.1/css/basscss.min.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css"> -->
     <title>{{ site.title }}</title>
     <meta name="description" content="">
     <meta name="author" content="Brian Zelip">
@@ -78,6 +77,7 @@
         padding: 0;
       }
 
+
       /*
           .tag adapted from http://codepen.io/wbeeftink/pen/dIaDH
       */
@@ -117,6 +117,8 @@
         cursor: pointer;
       }
       .tag:hover::before { border-right-color: var(--pri-dark); }
+
+      .is-checked { background-color: red; }
 
       :root {
         --pri-dark: #4a4b43;
@@ -159,6 +161,12 @@
 
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/isotope/3.0.1/isotope.pkgd.min.js"></script>
+    <script>
+      
+    </script>
 
   </body>
 
