still struggling with filtering, few minor changes here from my work with isotope practice, going to merge and delete this branch then iterate on filtering on master

--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
         border: 0;
         padding: 0;
       }
-
+      
+      /*
+          Trying isotope on combination filter
+          - http://codepen.io/desandro/pen/zrMXQv
+          - http://isotope.metafizzy.co/filtering.html
+      */
+      .is-checked { background-color: red; }
 
       /*
           .tag adapted from http://codepen.io/wbeeftink/pen/dIaDH
@@ -117,8 +123,6 @@
         cursor: pointer;
       }
       .tag:hover::before { border-right-color: var(--pri-dark); }
-
-      .is-checked { background-color: red; }
 
       :root {
         --pri-dark: #4a4b43;
@@ -165,7 +169,7 @@
     <script src="https://cdn.jsdelivr.net/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/isotope/3.0.1/isotope.pkgd.min.js"></script>
     <script>
-      
+
     </script>
 
   </body>
