--- a/index.html
+++ b/index.html
@@ -7,134 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="https://npmcdn.com/basscss@7.1.1/css/basscss.min.css">
+    <link rel="stylesheet" href="css/syllabus.min.css">
     <title>{{ site.title }}</title>
     <meta name="description" content="">
     <meta name="author" content="Brian Zelip">
     <meta name="keywords" content="">
-    <style>
-      body,
-      .vh100 { min-height: 100vh; }
-      body,
-      a { color: var(--pri-dark); }
-      .serif { font-family: Athelas, Georgia, serif; }
-      .align-center { align-items: center; }
-      .justify-center { justify-content: center; }
-      .justify-between { justify-content: space-between; }
-      .pt2 { padding-top: 1rem; }
-      .pb3 { padding-bottom: 2rem; }
-      .pr1 { padding-right: .5rem; }
-      .px2 {
-        padding-right: 1rem;
-        padding-left: 1rem;
-      }
-      .px3 {
-        padding-right: 2rem;
-        padding-left: 2rem;
-      }
-      @custom-media --breakpoint-sm (min-width: 40em);
-      @custom-media --breakpoint-md (min-width: 60em);
-      @custom-media --breakpoint-lg (min-width: 80em);
-      @media (min-width: 40em) {
-        .sm-px3 {
-          padding-right: 2rem;
-          padding-left: 2rem;
-        }
-      }
-      .pri-dark { color: var(--pri-dark); }
-      .pri-light { color: var(--pri-light); }
-      .bg-pri-dark { background-color: var(--pri-dark); }
-      .bg-pri-light { background-color: var(--pri-light); }
-      .container { max-width: var(--container-width); }
-
-      /*
-          button reset adapted from https://github.com/basscss/addons/blob/master/modules/btn/index.css
-      */
-      button {
-        font-family: inherit;
-        font-size: inherit;
-        font-weight: inherit;
-        text-decoration: none;
-        cursor: pointer;
-        line-height: inherit;
-        padding: 0;
-        margin: 0;
-        height: auto;
-        border: none;
-        vertical-align: middle;
-        -webkit-appearance: none;
-        color: inherit;
-        background-color: transparent;
-      }
-      button:hover { text-decoration: none; }
-      button:focus {
-        outline: none;
-        border-color: none;
-        box-shadow: none;
-      }
-      ::-moz-focus-inner {
-        border: 0;
-        padding: 0;
-      }
-
-      /*
-          Trying isotope on combination filter
-          - http://codepen.io/desandro/pen/zrMXQv
-          - http://isotope.metafizzy.co/filtering.html
-      */
-      .is-checked { background-color: red; }
-
-      /*
-          .tag adapted from http://codepen.io/wbeeftink/pen/dIaDH
-      */
-      .tag {
-        background: #eee;
-        border-radius: 3px 0 0 3px;
-        display: inline-block;
-        padding: 0 .75rem 0 1.5rem;
-        position: relative;
-        text-decoration: none;
-      }
-      .tag::before {
-        background: #fff;
-        border-bottom: .819rem solid transparent;
-        border-right: .625rem solid #eee;
-        border-top: .72rem solid transparent;
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-      }
-      .tag::after {
-        background: #fff;
-        border-radius: 10px;
-        box-shadow: inset 1px 0 rgba(0, 0, 0, 0.25);
-        content: '';
-        height: .375rem;
-        left: .625rem;
-        position: absolute;
-        width: .375rem;
-        top: .625rem;
-      }
-      .tag:hover {
-        background-color: var(--pri-dark);
-        color: var(--pri-light);
-        text-decoration: none;
-        cursor: pointer;
-      }
-      .tag:hover::before { border-right-color: var(--pri-dark); }
-
-      :root {
-        --pri-dark: #4a4b43;
-        --pri-light: #fff;
-        /*--pri-dark: #492a54;*/
-        /*--pri-light: #bad7b0;*/
-        /*--pri-dark: #614d29;*/
-        /*--pri-light: #a2b5d5;*/
-        --container-width: 80rem;
-      }
-
-    </style>
   </head>
 
   <body class="px2 sm-px3 bg-pri-light">
