--- a/index.html
+++ b/index.html
@@ -45,44 +45,7 @@
 
     <script src="https://cdn.jsdelivr.net/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/isotope/3.0.1/isotope.pkgd.min.js"></script>
-    <script>
-      // init Isotope
-      var $grid = $('#iso-grid').isotope({
-        itemSelector: 'article'
-      });
-
-      // store user-selected filters
-      let filters = [];
-
-      // change is-checked class on buttons
-      $('#filter-buttons').on( 'click', 'button', function( event ) {
-        const $target = $( event.currentTarget );
-        $target.toggleClass('is-checked');
-        let isChecked = $target.hasClass('is-checked');
-        let filter = $target.attr('data-filter');
-        if ( isChecked ) {
-          addFilter( filter );
-        } else {
-          removeFilter( filter );
-        }
-        // filter isotope
-        // group filters together, inclusive
-        $grid.isotope({ filter: filters.join(',') });
-      });
-
-      function addFilter( filter ) {
-        if ( filters.indexOf( filter ) == -1 ) {
-          filters.push( filter );
-        }
-      }
-
-      function removeFilter( filter ) {
-        var index = filters.indexOf( filter);
-        if ( index != -1 ) {
-          filters.splice( index, 1 );
-        }
-      }
-    </script>
+    <script src="js/filter.js"></script>
 
   </body>
 
