--- a/test2.html
+++ b/test2.html
@@ -45,50 +45,47 @@
 
         <main class="flex-grow">
           <div id="isotope-container">
+
             <article id="A" class="isotope-item border mb2 p2" data-tags="one two three">
-              <h1 class="h3 mt0">article#A</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas aliquid saepe a ex dignissimos nemo soluta expedita nisi mollitia iure autem excepturi, dolor, fuga, aperiam ratione quia provident. Adipisci, consequatur.</p>
-              <div>
-                <p class="m0"><code>[data-tags]</code>:</p>
-                <ul>
-                  <li>one</li>
-                  <li>two</li>
-                  <li>three</li>
-                </ul>
-              </div>
+              <h1 class="h3 mt0 inline">article#A</h1>
+              <p class="m0 inline red"><code>[data-tags]</code>:</p>
+              <ul class="inline list-reset red">
+                <li class="inline">one</li>
+                <li class="inline">two</li>
+                <li class="inline">three</li>
+              </ul>
+              <p class="mb0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas aliquid saepe a ex dignissimos nemo soluta expedita nisi mollitia iure autem excepturi, dolor, fuga, aperiam ratione quia provident. Adipisci, consequatur.</p>
             </article>
+
             <article id="B" class="isotope-item border mb2 p2" data-tags="two three">
-              <h1 class="h3 mt0">article#B</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est inventore quisquam incidunt laudantium rem porro doloribus laborum adipisci ad. Voluptate corporis laborum optio iste, saepe, ullam quisquam ducimus illo laboriosam.</p>
-              <div>
-                <p class="m0"><code>[data-tags]</code>:</p>
-                <ul>
-                  <li>two</li>
-                  <li>three</li>
-                </ul>
-              </div>
+              <h1 class="h3 mt0 inline">article#B</h1>
+              <p class="m0 inline red"><code>[data-tags]</code>:</p>
+              <ul class="inline list-reset red">
+                <li class="inline">two</li>
+                <li class="inline">three</li>
+              </ul>
+              <p class="mb0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est inventore quisquam incidunt laudantium rem porro doloribus laborum adipisci ad. Voluptate corporis laborum optio iste, saepe, ullam quisquam ducimus illo laboriosam.</p>
             </article>
+
             <article id="C" class="isotope-item border mb2 p2" data-tags="one">
-              <h1 class="h3 mt0">article#C</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus dicta maiores doloribus dolorem, placeat molestias adipisci, porro id odit ipsa modi facere laborum, rem nesciunt minus accusantium suscipit alias saepe.</p>
-              <div>
-                <p class="m0"><code>[data-tags]</code>:</p>
-                <ul>
-                  <li>one</li>
-                </ul>
-              </div>
+              <h1 class="h3 mt0 inline">article#C</h1>
+              <p class="m0 inline red"><code>[data-tags]</code>:</p>
+              <ul class="inline list-reset red">
+                <li class="inline">one</li>
+              </ul>
+              <p class="mb0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus dicta maiores doloribus dolorem, placeat molestias adipisci, porro id odit ipsa modi facere laborum, rem nesciunt minus accusantium suscipit alias saepe.</p>
             </article>
+
             <article id="D" class="isotope-item border mb2 p2" data-tags="three one">
-              <h1 class="h3 mt0">article#D</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit doloribus in culpa laudantium ullam error, doloremque nihil illum, quo explicabo facilis tempora repellat repellendus modi ex! Sequi veniam, quae quos.</p>
-              <div>
-                <p class="m0"><code>[data-tags]</code>:</p>
-                <ul>
-                  <li>three</li>
-                  <li>one</li>
-                </ul>
-              </div>
+              <h1 class="h3 mt0 inline">article#D</h1>
+              <p class="m0 inline red"><code>[data-tags]</code>:</p>
+              <ul class="inline list-reset red">
+                <li class="inline">three</li>
+                <li class="inline">one</li>
+              </ul>
+              <p class="mb0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit doloribus in culpa laudantium ullam error, doloremque nihil illum, quo explicabo facilis tempora repellat repellendus modi ex! Sequi veniam, quae quos.</p>
             </article>
+
           </div>
         </main>
 
